🔥 Fixed overflow

--- a/styles.css
+++ b/styles.css
@@ -277,6 +277,7 @@ strong {
     width: 100%;
     margin: 0 64px;
     padding-bottom: 40px;
+    overflow-x: auto;
 }
 
 .back-button {
